web-infras/parser/tests/fixtures/babel/es2015/modules/duplicate-named-export-destructuring-assignment/output.txt
[SyntaxError]: Identifier has already been declared. (2,16)
2|export const { foo = 1 } = bar;
 |              ^
